fix scripts