@@ -1,5 +1,5 @@
-set CLASSPATH=.\target\Practica2ChatRMI-0.0.1-SNAPSHOT.jar
+set CLASSPATH=.\target\Practica2ChatRMI-1.0-SNAPSHOT.jar
 
-java -Djava.security.policy=registerit.policy ^
+java -Djava.security.policy=registerit.policy -Djava.security.manager=allow ^
 -Djava.rmi.server.codebase=http://localhost:8080/Practica2ChatRMI-Web/ ^
 es.ubu.lsi.server.ChatServerDynamic
